Fix wrong align

--- a/style.css
+++ b/style.css
@@ -95,11 +95,13 @@ iframe {
     margin: 10px 0;
     padding: 15px;
     box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .option__title {
     margin: 0;
-    text-align: center;
 }
 
 .content {
